# univm

./: AGENTS.md  CLAUDE.md  Cargo.toml
.claude/: settings.local.json
crates/cfg-zkvm/: Cargo.toml  README.md
crates/cfg-zkvm-macro/: Cargo.toml
crates/cfg-zkvm-macro/src/: lib.rs
crates/cfg-zkvm-macro/tests/fail/: 01_expressions_statements.rs  01_expressions_statements.stderr  02_invalid_zkvm_identifier.rs  02_invalid_zkvm_identifier.stderr  03_zkvm_identifier_suggestions.rs  03_zkvm_identifier_suggestions.stderr
crates/cfg-zkvm-macro/tests/pass/: 01_shorthand.rs  02_full_form.rs  03_functions.rs  04_unknown_shorthand.rs
crates/cfg-zkvm/src/: lib.rs
crates/univm-build/: Cargo.toml
crates/univm-build/src/: lib.rs  risc0.rs
crates/univm-interface/: Cargo.toml
crates/univm-interface/src/: compiler.rs  lib.rs
crates/univm-io/: Cargo.toml
crates/univm-io/src/: bincode.rs  cbor.rs  lib.rs  rkyv.rs  ssz.rs  ssz_grandine.rs
crates/univm-platform/: Cargo.toml
crates/univm-platform-base/: Cargo.toml
crates/univm-platform-base/src/: lib.rs
crates/univm-platform-macros/: Cargo.toml
crates/univm-platform-macros/src/: lib.rs
crates/univm-platform-risc0/: Cargo.toml
crates/univm-platform-risc0/src/: lib.rs
crates/univm-platform-sp1/: Cargo.toml
crates/univm-platform-sp1/src/: lib.rs
crates/univm-platform/src/: lib.rs
crates/univm-risc0/: Cargo.toml
crates/univm-risc0/src/: compiler.rs  lib.rs  zkvm.rs
crates/univm-sp1/: Cargo.toml
crates/univm-sp1/src/: compiler.rs  lib.rs  zkvm.rs
examples/sum/: Cargo.toml
examples/sum/guest/: Cargo.toml  build.rs  out.json
examples/sum/guest/methods/: Cargo.toml
examples/sum/guest/methods/src/: lib.rs  main.rs
examples/sum/guest/src/: lib.rs  main.rs
examples/sum/src/: main.rs  poc.rs
