[workspace]
members = [
    "crates/univm-build",
    "crates/univm-interface",
    "crates/univm-platform",
    "crates/univm-platform-base",
    "crates/univm-platform-risc0",
    "crates/univm-io",
    "crates/univm-platform-macros",
    "crates/univm-risc0",
    "crates/cfg-zkvm",
    "crates/cfg-zkvm-macro",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
univm-build = { path = "./crates/univm-build" }
univm-interface = { path = "./crates/univm-interface" }
univm-platform = { path = "./crates/univm-platform" }
univm-platform-base = { path = "./crates/univm-platform-base" }
univm-platform-risc0 = { path = "./crates/univm-platform-risc0" }
univm-platform-macros = { path = "./crates/univm-platform-macros" }
univm-risc0 = { path = "./crates/univm-risc0" }
univm-io = { path = "./crates/univm-io" }
cfg-zkvm-macro = { path = "./crates/cfg-zkvm-macro" }
cfg-zkvm = { path = "./crates/cfg-zkvm" }

risc0-zkvm = { version = "3.0.4" }
risc0-build = { version = "3.0.4" }
ssz = { git = "https://github.com/grandinetech/grandine", package = "ssz", branch = "develop" }
ssz-derive = { git = "https://github.com/grandinetech/grandine", package = "ssz_derive", branch = "develop" }
thiserror = { version = "2.0.17" }
syn = { version = "2.0.111" }
quote = { version = "1.0.42" }
proc-macro2 = { version = "1.0.103" }
cfg-if = { version = "1.0.4" }
paste = { version = "1.0.15" }
cargo_metadata = "0.23.1"
cfg_aliases = "0.2.1"
trybuild = "1.0.114"
proc-macro-error = "1.0.4"
