[package]
name = "cfg-zkvm-macro"
version = "0.1.0"
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
thiserror = { workspace = true }
proc-macro-error = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
