[package]
name = "univm-risc0"
version = "0.1.0"
edition.workspace = true

[dependencies]
cfg-if = { workspace = true }
univm-interface = { workspace = true }
univm-io = { workspace = true }
risc0-build = { workspace = true }
risc0-zkvm = { workspace = true, features = ['prove'] }
cargo_metadata = { workspace = true }
