[package]
name = "zkvm-guest-methods"
version = "0.1.0"
edition = "2024"

[lib]
name = "zkvm_guest_methods_lib"

[dependencies]
univm-platform = { workspace = true }
univm-io = { workspace = true, features = ["ssz"] }
bls12_381 = { git = "https://github.com/grandinetech/universal-precompiles.git", tag = "bls12_381-6bb9695-up.2", features = [
    "zkvm-risc0",
] }
sha2 = { git = "https://github.com/grandinetech/universal-precompiles.git", tag = "sha2-v0.10.9-up.2", features = [
    "zkvm-risc0",
] }
